tests/sout/linenum3.eqx.out
Error occurred at line: 6 (tests/sout/linenum3.eqx)
  004.  
  005.  : myword
=>006.    mymod:w1 mymod:w3 * ;
  007.  
  008.  myword

